updated jQuery file

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div class="container-fluid">
                 <div class=row>
                     <div class = "col-md-12 col-lg-12 col-sm-12 img">
-                        <img src="pictures/ping pong.jpg" class="card-img-top" alt="...">
+                        <img src="pictures/ping pong.jpg" class="card-img-top" alt="ping pong picture">
                     </div>
                 </div>
             </div>
