updated jQuery file

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <!-- Latest compiled JavaScript -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
 
-        <script src="index.js"></script>
+        <!-- <script src="index.js"></script> -->
         <script src="index_jquery.js"></script>
     </body>
 
